Update TWF & html

--- a/about.html
+++ b/about.html
@@ -29,23 +29,20 @@
           <a class="cs-iconLinkQR" onclick="window.location.href = goHome;">
                <img async src="images/icons/homeark-512.png" class="cs-iconLink" title="Home - About The Ark Bible Cross Icon" alt="Home - About The Ark Bible Cross Icon">
           </a>
-          <h3>"If you love something, let it go! If it loves you, it will return."</h3>
+          <h3>If you love someone, let them go! If they love you, they will return! <span class="cs-unknown">...unknown speaker</span></h3>
           <p>
-               This wise old saying has been with me for my whole entire life, and there is hardly a day goes by that
-               this thought does not pop into my head. I believe that this is precisely what Jesus was trying to tell us
-               when he said, "For whoever desires to save his life will lose it, but whoever loses his life for my sake
-               will find it." This profound statement can be found in Matthew 16:25 and similar verses in Mark 8:35 and
-               Luke 9:24.
+               This wise old saying has been with me for my whole entire life, and there is hardly a day goes by that this thought does not pop into my head. I believe that this is precisely what Jesus was trying to tell us when he said, "For whosoever desires to save his own life will lose it, but whosoever loses his life for my sake will find it." This profound statement can be found in Matthew 16:25 and similar verses are found in Mark 8:35 and Luke 9:24.
                <br>
                <br>
-               Essentially, I feel that Jesus is trying to teach us that, if we prioritize ourselves and focus solely on
-               preserving our own life, our worldly existence, and our own comfort, we will ultimately lose what truly
-               matters, which is our spiritual life and eternal salvation.
+               Essentially, I feel that Jesus is trying to teach us that, if we prioritize ourselves and focus solely on preserving our own life, our worldly existence, and our own comfort, we will ultimately lose what truly matters, which is our spiritual life and eternal salvation.
                <br>
                <br>
-               Self-sacrifice: By surrendering our life to God's purpose, following his teachings, and serving others,
-               we will paradoxically gain true life, which is a spiritual and eternal existence.
+               Self-sacrifice: By surrendering our life to God's purpose, following his teachings, and serving others, we will paradoxically gain true life, which is a spiritual and eternal existence.
           </p>
+
+          <br><br>
+          <a class="cs-twfLink" onclick="window.location.href = 'twfabout.html';">About the Twenty-First Century Version</a>
+
           <br><br>
           <hr>
           <br><br>
@@ -60,8 +57,6 @@
                     <span>New Hope Ministries </span>
                     <span class="cs-copySign"> ● </span>
                     <span>MIT License</span>
-                    <span class="cs-copySign"> ● </span>
-                    <span>Public Domain</span>
                </a>
                <br><br>
           </div>
