--- a/history.html
+++ b/history.html
@@ -658,6 +658,21 @@
 
           <hr>
           <br><br>
+          <div id="Italian Giovanni Diodati Version - 1649 - Versione Giovanni italiana Diodati" class="cs-historyBox">
+
+               <a class="cs-historyTitle" href="index.html?bid=1&cn=1&verid=43" target="_blank"
+                    title="Italian Giovanni Diodati Version - 1649 - Versione Giovanni italiana Diodati (ITV)">Italian Giovanni Diodati Version - 1649 - Versione Giovanni italiana Diodati (ITV)</a><br><br>
+               ✍️Author: Giovanni Diodati.<br>
+               📅Published: 1649
+               <p>
+                    The Italian Giovanni Diodati Version - 1649 - Versione Giovanni italiana Diodati (ITV) was translated by Giovanni Diodati (1576–1649), a Calvinist theologian born in Geneva to Italian Protestant refugees, was the first to translate the entire Bible into Italian directly from Hebrew and Greek. His goal was to provide Italian-speaking Protestants with a reliable vernacular Bible, much like Luther did for Germans. The first Italian translation was completed in 1603, the annotated edition was published in 1607. The revised edition with metrical Psalms was published in 1641. The final edition was published posthumously or shortly before his death in 1649. Diodati’s translation became the standard for Italian Protestants and was widely respected for its scholarly rigor and clarity. It was even consulted by the translators of the King James Version. Giovanni Diodati was a professor of Hebrew and Theology in Geneva, and attended the Synod of Dort from 1618–1619. He also translated the Bible into French in 1644. The Italian Giovanni Diodati Version - 1649 - Versione Giovanni italiana Diodati (ITV) Bible is firmly in the public domain, as it was published over 375 years ago.
+               </p>
+               <a href="https://en.wikipedia.org/wiki/Giovanni_Diodati" target="_blank"
+                    class="cs-historyTitle cs-historyTitleWiki" title="Wikipedia Italian Giovanni Diodati Version - 1649 - Versione Giovanni italiana Diodati (ITV)">Wikipedia - Italian Giovanni Diodati Version - 1649 - Versione Giovanni italiana Diodati (ITV)</a>
+          </div>
+
+          <hr>
+          <br><br>
           <div id="King James Version" class="cs-historyBox">
 
                <a class="cs-historyTitle" href="index.html?bid=1&cn=1&verid=19" target="_blank"
@@ -876,8 +891,6 @@
                     <span>New Hope Ministries </span>
                     <span class="cs-copySign"> ● </span>
                     <span>MIT License</span>
-                    <span class="cs-copySign"> ● </span>
-                    <span>Public Domain</span>
                <br><br>
           </div>
      </div>
