--- a/license.html
+++ b/license.html
@@ -488,6 +488,17 @@
 
           <hr>
           <br>
+          <span class="cs-title">Italian Giovanni Diodati Version - 1649 - Versione Giovanni italiana Diodati (ITV)</span>
+          <br>
+          <span>Copyright - Public Domain</span>
+          <p>
+               The Italian Giovanni Diodati Version - 1649 - Versione Giovanni italiana Diodati (ITV) Bible is firmly in the public domain, as it was published over 375 years ago.
+               <br>
+               <a target="_blank" href="https://en.wikipedia.org/wiki/Giovanni_Diodati">ITV Statement</a>
+          </p>
+
+          <hr>
+          <br>
           <span class="cs-title">King James Version (KJV)</span>
           <br>
           <span>Copyright - Public Domain</span>
@@ -597,8 +608,6 @@
                <span>New Hope Ministries </span>
                <span class="cs-copySign"> ● </span>
                <span>MIT License</span>
-               <span class="cs-copySign"> ● </span>
-               <span>Public Domain</span>
           </div>
           <br><br>
      </div>
