Update TWF & html

--- a/about.html
+++ b/about.html
@@ -23,12 +23,15 @@
 
 <body class="cs-noScroll">
 
+     <div class="cs-imgBanner">
+          <img src="/images/crystal.png" class="cs-imgBanner" alt="img">
+          <a class="cs-iconLinkQR cs-imgLogo" onclick="window.location.href = goHome;">
+               <img async src="images/icons/qr-logo.png" class="cs-iconLink" title="Home - The Ark Bible Cross Icon" alt="Home - The Ark Bible Cross Icon">
+          </a>
+     </div>
      <div class="cs-page">
 
-          <h2>About The Ark Bible</h2>
-          <a class="cs-iconLinkQR" onclick="window.location.href = goHome;">
-               <img async src="images/icons/homeark-512.png" class="cs-iconLink" title="Home - About The Ark Bible Cross Icon" alt="Home - About The Ark Bible Cross Icon">
-          </a>
+          <h2 class="cs-contentsTitle">About The Ark Bible</h2>
           <h3>If you love someone, let them go! If they love you, they will return! <span class="cs-unknown">...unknown speaker</span></h3>
           <p>
                This wise old saying has been with me for my whole entire life, and there is hardly a day goes by that this thought does not pop into my head. I believe that this is precisely what Jesus was trying to tell us when he said, "For whosoever desires to save his own life will lose it, but whosoever loses his life for my sake will find it." This profound statement can be found in Matthew 16:25 and similar verses are found in Mark 8:35 and Luke 9:24.
@@ -49,7 +52,7 @@
           <div class="cs-GodLovesYou cs-GodLovesYouPages">
                <div>God loves you, Jesus loves you, I love you, and this is God's free gift for you!</div>
                <div>The TWF version is being actively edited and is subject to change daily.</div>
-               <div>If you prefer to read older Bible versions, please feel free to do so.</div><br>
+               <div>If you prefer to read other Bible versions, please feel free to do so.</div><br>
                <a href="license.html" class="cs-copyright">
                     <span>Copyright ©</span>
                     <span id="id-copyrighted">2018-2025</span>
