--- a/help.html
+++ b/help.html
@@ -25,25 +25,28 @@
 
 <body>
 
+     <div class="cs-imgBanner">
+          <img src="/images/crystal.png" class="cs-imgBanner" alt="img">
+          <a class="cs-iconLinkQR cs-imgLogo" onclick="window.location.href = goHome;">
+               <img async src="images/icons/qr-logo.png" class="cs-iconLink" title="Home - The Ark Bible Cross Icon" alt="Home - The Ark Bible Cross Icon">
+          </a>
+     </div>
      <div class="cs-page">
 
-          <h2>The Ark Bible Help</h2>
-          <a class="cs-iconLinkQR" onclick="window.location.href = goHome;">
-               <img async src="images/icons/homeark-512.png" class="cs-iconLink" title="Home - The Ark Bible Cross Icon"
-                    alt="Home - The Ark Bible Icon Cross Icon">
-          </a>
-
+          <h2 class="cs-contentsTitle">The Ark Bible Help</h2>
           <p>
-               The Ark Bible is an open-source Bible application project, that can be freely distributed by anyone and
-               to anyone for use in spreading God's Holy word.
+               The Ark Bible is an open-source Bible application project, that can be freely distributed by anyone for use in spreading God's Holy word.
           </p>
+
+          <br>
+          <hr>
+          <br>
+          If you are experiencing any erratic behavior in "The Ark Bible", it can usually be fixed by clicking on the Reset Defaults link at the bottom of the main page, and reloading the main page twice.
           <br><br>
           <hr>
 
-          <br><br>
-          <hr>
           <p id="id-LocalStorage">
-               1. Local Storage - If you decide to let The Ark Bible store files locally, all the support files for the
+               <span class="cs-title">1. Local Storage</span> - If you decide to let The Ark Bible store files locally, all the support files for the
                application will be stored locally in your browser cache as each page, such as this Help page is
                accessed. All the version files will be stored locally as you change Bible versions. The first time you
                use a Bible version listed in the Versions menu or open another page that is part of the app, it will
@@ -68,43 +71,43 @@
                locally.
           </p>
 
-          <br><br>
+          <br>
           <hr>
           <p id="id-Theme">
-               2. Theme - The Theme button changes the theme from light to dark themes and vice versa.
+               <span class="cs-title">2. Theme</span> - The Theme button changes the theme from light to dark themes and vice versa.
           </p>
 
-          <br><br>
+          <br>
           <hr>
           <p id="id-Font">
-               3. Font - The Font buttons increase and reduce the font size. Clicking the plus '+' button increases the
+               <span class="cs-title">3. Font</span> - The Font buttons increase and reduce the font size. Clicking the plus '+' button increases the
                font size, and clicking the minus '-' button decreases the font size. Clicking the actual Font button
                resets the font to the default font size..
           </p>
 
-          <br><br>
+          <br>
           <hr>
           <p id="id-RedLetter">
-               4. The Red Letter - The Red Letter, Black Letter function is currently only available for the partially
+               <span class="cs-title">4. The Red Letter</span> - The Red Letter, Black Letter function is currently only available for the partially
                edited chapters in the Twenty-Fist Century Version of the Bible. Other chapters and versions will
                eventually be able to use this functionality also, but not today. The Red Letter - Black Letter button is
                not visible for this functionality for the other versions, so the disappearing funcitionality buttons are
                not an error.
           </p>
 
-          <br><br>
+          <br>
           <hr>
           <p id="id-ParagraphLayout">
-               5. The Paragraph Layout - Line Layout function is currently only available for the partially edited
+               <span class="cs-title">5. The Paragraph Layout</span> - Line Layout function is currently only available for the partially edited
                chapters in the Twenty-Fist Century Version of the Bible. Other versions will be able to eventually use
                this functionality also, but not today. The Paragraph Layout - Line Layout button is not visible for this
                functionality for the other versions, so the disappearing funcitionality buttons are not an error.
           </p>
 
-          <br><br>
+          <br>
           <hr>
           <p id="id-ResetDefaults">
-               6. The Reset Defaults button resets the settings in the app back to the default settings. It also deletes
+               <span class="cs-title">6. The Reset Defaults</span> - button resets the settings in the app back to the default settings. It also deletes
                any data stored on your device, and the next time you run the app it will ask you if you want to allow
                data to be stored locally. If you click cancel, nothing will be stored on your device. If you change your
                mind later and want to have access to the app offline, just click the Reset Defaults button, and restart
@@ -112,26 +115,26 @@
                not.
           </p>
 
-          <br><br>
+          <br>
           <hr>
           <p id="id-QRCode">
-               7. The Ark QR Code Link button will display a QR Code link that can be scanned to open The Ark Bible app
+               <span class="cs-title">7. The Ark QR Code Link</span> - button will display a QR Code link that can be scanned to open The Ark Bible app
                without having to type it in.
           </p>
 
-          <br><br>
+          <br>
           <hr>
           <p id="id-BibleAsk">
-               8. The BibleAsk app is an AI(Artificial Intelligence) Bible research tool and chat bot. You can research
+               <span class="cs-title">8. The BibleAsk app</span> - is an AI(Artificial Intelligence) Bible research tool and chat bot. You can research
                the Bible, and have chats about the Bible with this app. This app is not affiliated with The Ark Bible,
                but I added this link because I thought it looked very promising.
           </p>
 
-          <br><br>
+          <br>
           <hr>
           <p id="id-SpeechSynthesis">
                <span>
-                    9. The speech synthesis functionality for The Ark Bible, currently works in a very inconsistant way,
+                    <span class="cs-title">9. The Speech Synthesis</span> - functionality for The Ark Bible, currently works in a very inconsistant way,
                     and funcionality can depend on the browser, and your device operating system. Currently it works
                     best with the Microsoft Edge browser on Windows. It works with the Chrome browser, but I have had
                     very inconsistant results with languages other than English in the Chrome Browser. Right now the
@@ -143,11 +146,11 @@
                </span>
           </p>
 
-          <br><br>
+          <br>
           <hr>
           <p id="id-ReadChronological">
                <span>
-                    10. The 365 Day Chronological Reading Plan is a feature of The Ark Bible that is now available. It
+                    <span class="cs-title">10. The 365 Day Chronological Reading Plan</span> - is a feature of The Ark Bible that is now available. It
                     is an arrangement of the Bible with the chapters listed in chronological order as they happened
                     historically. The arrangement comes from a chronological list prepared by the Blue Letter Bible,
                     which can be seen here.
@@ -159,11 +162,11 @@
           </p>
 
           <hr>
-          <br><br>
+          <br>
           <div class="cs-GodLovesYou cs-GodLovesYouPages">
                <div>God loves you, Jesus loves you, I love you, and this is God's free gift for you!</div>
                <div>The TWF version is being actively edited and is subject to change daily.</div>
-               <div>If you prefer to read older Bible versions, please feel free to do so.</div><br>
+               <div>If you prefer to read other Bible versions, please feel free to do so.</div><br>
                <a href="license.html">
                     <span>Copyright ©</span>
                     <span id="id-copyrighted">2018-2025</span>
