--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
 <body>
      <div id="id-loader" class="cs-loader"> </div>
      <div id="top"></div>
-     <img id="logo" async src="images/icons/ark-192.png" class="cs-logo" alt="The Ark Bible Cross Icon" title="The Ark Bible Cross Icon" onclick="aClick(goHome)"></img>
+     <img id="logo" async src="images/icons/ark-192.png" class="cs-logo" alt="The Ark Bible Cross Icon"
+          title="The Ark Bible Cross Icon" onclick="aClick(goHome)"></img>
 
      <div id="id-headerTitle" class="cs-header cs-title" onclick="openBoxes(event)">
 
-          <span class="cs-logoTitle" onclick="aClick(goHome)"</span>The Ark Bible</span>
+          <span class="cs-logoTitle" onclick="aClick(goHome)" </span>The Ark Bible</span>
 
           <div id="id-search" class="cs-search" onclick="openSearch(event)">
                <div class="cs-magnifier">⚲</div>
@@ -109,8 +110,6 @@
                          <a class="cs-glossaryLink" onclick="aClick('about.html')">About The Ark</a>
                          <br><br>
                          <a class="cs-glossaryLink" onclick="aClick('statement.html')">Statement of Faith</a>
-
-
 
                          <br><br>
                          <a class="cs-glossaryLink" onclick="aClick('license.html')">Licenses</a>
@@ -187,7 +186,7 @@
                <div class="cs-GodLovesYou">
                     <div>God loves you, Jesus loves you, I love you, and this is God's free gift for you!</div>
                     <div>The TWF version is being actively edited and is subject to change daily.</div>
-                    <div>If you prefer to read older Bible versions, please feel free to do so.</div>
+                    <div>If you prefer to read other Bible versions, please feel free to do so.</div>
                     <br>
                     <a onclick="aClick('license.html')" class="cs-copyright">
                          <span>Copyright ©</span>
