--- a/qr.html
+++ b/qr.html
@@ -9,6 +9,7 @@
      <link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon.png">
 
      <title>The Ark Bible QR Code</title>
+     <link async rel="stylesheet" type="text/css" href="code/css/variables.css">
      <link async rel="stylesheet" type="text/css" href="code/css/html.css">
      <script async src="code/js/variables.js"></script>
      <script>
@@ -21,31 +22,29 @@
 </head>
 
 <body class="cs-noScroll">
-
+     <div class="cs-imgBanner">
+          <img src="/images/crystal.png" class="cs-imgBanner" alt="img">
+          <a class="cs-iconLinkQR cs-imgLogo" onclick="window.location.href = goHome;">
+               <img async src="images/icons/qr-logo.png" class="cs-iconLink" title="Home - The Ark Bible Cross Icon" alt="Home - The Ark Bible Cross Icon">
+          </a>
+     </div>
      <div class="cs-page">
 
-          <a class="cs-iconA" onclick="window.location.href = goHome;">
-               <img async src="images/icons/homeark-512.png" class="cs-iconLink" title="Home - The Ark Bible Cross Icon" alt="Home - The Ark Bible Cross Icon">
-               <br><br>
-          <a class="cs-iconLinkQR" onclick="window.location.href = goHome;">https://thearkbible.com</a>
-          </a>
-
-          <br><br><br><br>
           <h3 class="cs-h2">The Ark Bible QR Code</h3>
 
+          <h3 class="cs-h2"><a href="https://thearkbible.com">https://thearkbible.com</a></h3>
           <br>
 
           <a class="cs-iconA" onclick="window.location.href = goHome;">
                <img async src="images/qr-code.png" id="id-qrcode" class="cs-qrcode" alt="The Ark Bible QR Code link" title="The Ark Bible QR Code link">
           </a>
           <p class="cs-qrText">Scan the QR code with the camera on your device, when the link pops up in your camera, click it and if your device supports this functionality, "The Ark Bible" will open in your default browser.</p>
-          <br>
           <hr>
 
           <div class="cs-GodLovesYou cs-GodLovesYouPages">
                <div>God loves you, Jesus loves you, I love you, and this is God's free gift for you!</div>
                <div>The TWF version is being actively edited and is subject to change daily.</div>
-               <div>If you prefer to read older Bible versions, please feel free to do so.</div><br>
+               <div>If you prefer to read other Bible versions, please feel free to do so.</div><br>
                <a href="license.html">
                     <span>Copyright ©</span>
                     <span id="id-copyrighted">2018-2025</span>
