--- a/statement.html
+++ b/statement.html
@@ -22,16 +22,16 @@
 </head>
 
 <body>
-
-     <div class="cs-page">
-
-          <a class="cs-iconLinkQR" onclick="window.location.href = goHome;">
-               <img async src="images/icons/homeark-512.png" class="cs-iconLink" title="Home - The Ark Bible Cross Icon"
+     <div class="cs-imgBanner">
+          <img src="/images/crystal.png" class="cs-imgBanner" alt="img">
+          <a class="cs-iconLinkQR cs-imgLogo" onclick="window.location.href = goHome;">
+               <img async src="images/icons/qr-logo.png" class="cs-iconLink" title="Home - The Ark Bible Cross Icon"
                     alt="Home - The Ark Bible Cross Icon">
           </a>
-          <h2>Statement of Faith</h2><br><br>
+     </div>
+     <div class="cs-page">
+          <h2 class="cs-contentsTitle">Statement of Faith</h2>
           <hr>
-          <p>
           <h4>Jesus Christ:</h4>
           We believe that Jesus Christ is God's Son, the second person of the Trinity, and he was God who came to earth
           as a man to bear our sin for us. He is the only man who ever lived a sinless life. He was born to a virgin,
@@ -121,14 +121,13 @@
           <br>
           <span class="cs-emphasis">See:</span> (John 1:1, John 1:14, John 1:18, John 14:28, John 15:26, John 16:28,
           Philippians 2:6)
-          </p>
 
           <hr>
           <br><br>
           <div class="cs-GodLovesYou cs-GodLovesYouPages">
                <div>God loves you, Jesus loves you, I love you, and this is God's free gift for you!</div>
                <div>The TWF version is being actively edited and is subject to change daily.</div>
-               <div>If you prefer to read older Bible versions, please feel free to do so.</div><br>
+               <div>If you prefer to read other Bible versions, please feel free to do so.</div><br>
                <a href="license.html">
                     <span>Copyright ©</span>
                     <span id="id-copyrighted">2018-2025</span>
