--- a/chron.html
+++ b/chron.html
@@ -72,6 +72,9 @@
                               Letter Bible Chronological Reading Plan</a>
                     </div><br>
                     <div>God loves you, Jesus loves you, I love you, and this is God's free gift for you!</div>
+                    <div>The TWF version is being actively edited and is subject to change daily.</div>
+                    <div>If you prefer to read other Bible versions, please feel free to do so.</div>
+                    <br>
                     <a onclick="aClick('license.html')" class="cs-copyright">
                          <span>Copyright ©</span>
                          <span id="id-copyrighted">2018-2025</span>
