--- a/comp.html
+++ b/comp.html
@@ -80,7 +80,7 @@
                <div class="cs-GodLovesYou">
                     <div>God loves you, Jesus loves you, I love you, and this is God's free gift for you!</div>
                     <div>The TWF version is being actively edited and is subject to change daily.</div>
-                    <div>If you prefer to read older Bible versions, please feel free to do so.</div>
+                    <div>If you prefer to read other Bible versions, please feel free to do so.</div>
                     <br>
                     <a onclick="aClick('license.html')" class="cs-copyright">
                          <span>Copyright ©</span>
