--- a/twfabout.html
+++ b/twfabout.html
@@ -24,32 +24,67 @@
 
 <body class="cs-pagesBody">
 
-     <div class="cs-page">
-          <a class="cs-iconLinkQR" onclick="window.location.href = goHome;">
-               <img async src="images/icons/homeark-512.png" class="cs-iconLink" title="Home - The Ark Bible Cross Icon" alt="Home - The Ark Bible Cross Icon">
+     <div class="cs-imgBanner">
+          <img src="/images/crystal.png" class="cs-imgBanner" alt="img">
+          <a class="cs-iconLinkQR cs-imgLogo" onclick="window.location.href = goHome;">
+               <img async src="images/icons/qr-logo.png" class="cs-iconLink" title="Home - The Ark Bible Cross Icon"
+                    alt="Home - The Ark Bible Cross Icon">
           </a>
-          <h3>About The Twenty-First Century Version (TWF)</h3>
+     </div>
+     <div class="cs-page">
+
+          <h3 class="cs-contentsTitle">About The Twenty-First Century Version (TWF)</h3>
           <hr>
           <br>
-          Work on the Twenty-First Century Version (TWF) Bible was begun in 2018, shortly after I experienced an extended stay in the hospital, where I saw God writing on my hospital room window with his finger. I feel very strongly that God called me to this work, and I am sure since I am an imperfect sinner, that my interpretation of the Scriptures will also be imperfect. The Holy Spirit is my guiding light in this endeavor, and has revealed to me that God wants a new scripture with a much kinder and forgiving tone than the traditional Scriptures. The foundation for the Twenty-First Century Version is the King James Version which was published in 1611. I have compared some verses that seem to be incomplete to me, to other translations more modern than the King James Version. Some of these more modern translations were translated from earlier Greek and Hebrew texts that were discovered after 1901. This is not a word for word Bible translation, it is my interpretation of what the Bible is saying to me, and a faithful interpretation of what the Holy Spirit is trying to show me. I pray over and try to analyze each verse for what God is truly trying to say with the help of the Holy Spirit, then I rewrite it in such a way that I can understand it. It's a translation for me, and for you, if you want it. I try to use modern twenty-first century English grammar and I try to proplerly structure the sentences so that modern readers, especially those with a college education understand what God's word says.
+          Work on the Twenty-First Century Version (TWF) Bible was begun in 2018, shortly after I experienced an
+          extended stay in the hospital, where I saw God writing on my hospital room window with his finger. I feel very
+          strongly that God called me to this work, and I am sure since I am an imperfect sinner, that my interpretation
+          of the Scriptures will also be imperfect. The Holy Spirit is my guiding light in this endeavor, and has
+          revealed to me that God wants a new scripture with a much kinder and forgiving tone than the traditional
+          Scriptures. The foundation for the Twenty-First Century Version is the King James Version which was published
+          in 1611. I have compared some verses that seem to be incomplete to me, to other translations more modern than
+          the King James Version. Some of these more modern translations were translated from earlier Greek and Hebrew
+          texts that were discovered after 1901. This is not a word for word Bible translation, it is my interpretation
+          of what the Bible is saying to me, and a faithful interpretation of what the Holy Spirit is trying to show me.
+          I pray over and try to analyze each verse for what God is truly trying to say with the help of the Holy
+          Spirit, then I rewrite it in such a way that I can understand it. It's a translation for me, and for you, if
+          you want it. I try to use modern twenty-first century English grammar and I try to proplerly structure the
+          sentences so that modern readers, especially those with a college education understand what God's word says.
           <br><br>
-          There are many verses in the older scriptures that seem to me to have incomplete information, leaving the reader with the need to fill in the blank. I have prayed over each of these verses and asked God to fill in the blanks for me. I feel he has done this to my understanding, but the Scriptures may be saying something entirely different to you. My whole entire life the Lord has given my heart a desire to leave this world a better place than it was when I arrived. I hope to one day hear "Well done, good and faithful servant."
+          There are many verses in the older scriptures that seem to me to have incomplete information, leaving the
+          reader with the need to fill in the blank. I have prayed over each of these verses and asked God to fill in
+          the blanks for me. I feel he has done this to my understanding, but the Scriptures may be saying something
+          entirely different to you. My whole entire life the Lord has given my heart a desire to leave this world a
+          better place than it was when I arrived. I hope to one day hear "Well done, good and faithful servant."
           <br><br>
-          I have done a lot of praying over The Twenty-First Century Version of the Bible, and I have found that just as Ecclesiastes 12:8 says, "And the teacher says, 'Everything is meaningless vanity, this too is completely meaningless vanity, like chasing the wind!'" And God, I want to thank you for your help, and I pray this work is what you asked of me, and I also pray that it brings glory to your name!
+          I have done a lot of praying over The Twenty-First Century Version of the Bible, and I have found that just as
+          Ecclesiastes 12:8 says, "And the teacher says, 'Everything is meaningless vanity, this too is completely
+          meaningless vanity, like chasing the wind!'" And God, I want to thank you for your help, and I pray this work
+          is what you asked of me, and I also pray that it brings glory to your name!
           <br><br>
           <span id="id-lastEdited"></span>
           <br><br>
           <a href="https://www.bing.com/search?q=What%20Hebrew%20and%20Greek%20texts%20were%20discovered%20after%201901&qs=n&form=QBRE&sp=-1&ghc=1&lq=0&pq=what%20hebrew%20and%20greek%20texts%20were%20discovered%20after%201901&sc=7-54&sk=&cvid=DB00D1813BE149038C0328A00E969CF6&ghsh=0&ghacc=0&ghpl="
-               target="_blank" class="cs-movieTitleWiki" title="More About Bibles After 1901">More Info About Bibles After 1901</a>
+               target="_blank"  class="cs-twfLink" title="More About Bibles After 1901">More Info About Bibles
+               After 1901</a>
           <br><br><br><br>
           <hr>
 
           <h5>Current Editing Status:</h5>
           The status field in the following tables indicate the editing status of each book and chapter of the
           Twenty-First Century version of the Bible. An asterick * in the Book column indicates the book that is
-          currently being edited. "Rough Draft" in the Status field means that the initial editing on that chapter is finished and is ready for final editing, grammar checks, and spell checking. "Altered by algorythm, but not human edited" in the Status field indicates that certain phrases in that book have been altered by computer algorythm but have not been edited by a person, these books could contain inaccuracies. Numbers such as "1:2" in the Status field indicates which chapters and verses of a particular book in the Twenty-First Century Version are being actively edited to the rough draft status.
+          currently being edited. "Rough Draft" in the Status field means that the initial editing on that chapter is
+          finished and is ready for final editing, grammar checks, and spell checking. "Altered by algorythm, but not
+          human edited" in the Status field indicates that certain phrases in that book have been altered by computer
+          algorythm but have not been edited by a person, these books could contain inaccuracies. Numbers such as "1:2"
+          in the Status field indicates which chapters and verses of a particular book in the Twenty-First Century
+          Version are being actively edited to the rough draft status.
           <br><br>
-          The Twenty-First Century version of the Bible contains 39 Old Testament books and 27 New Testament books, for a total of 66 books. The "Chapters" field lists the total number of chapters for each book, for a total of 929 Old Testament chapters and 260 New Testament chapters, with a total of 1189 chapters altogether. The "Verses" field lists the total number of verses for each book, for a total of 23,145 Old Testament verses and 7,957 New Testament verses, with a total of 31,102 verses altogether.
+          The Twenty-First Century version of the Bible contains 39 Old Testament books and 27 New Testament books, for
+          a total of 66 books. The "Chapters" field lists the total number of chapters for each book, for a total of 929
+          Old Testament chapters and 260 New Testament chapters, with a total of 1189 chapters altogether. The "Verses"
+          field lists the total number of verses for each book, for a total of 23,145 Old Testament verses and 7,957 New
+          Testament verses, with a total of 31,102 verses altogether.
 
           <h5>Old Testament:</h5>
           <table id="id-oldTable" border="1" class="cs-tbl">
@@ -220,7 +255,7 @@
                     <tr>
                          <td>23</td>
                          <td>*Isaiah</td>
-                         <td>3:1</td>
+                         <td>7:1</td>
                          <td>66</td>
                          <td>1292</td>
                     </tr>
@@ -549,14 +584,14 @@
           <div class="cs-GodLovesYou cs-GodLovesYouPages">
                <div>God loves you, Jesus loves you, I love you, and this is God's free gift for you!</div>
                <div>The TWF version is being actively edited and is subject to change daily.</div>
-               <div>If you prefer to read older Bible versions, please feel free to do so.</div><br>
+               <div>If you prefer to read other Bible versions, please feel free to do so.</div><br>
                <a href="license.html">
                     <span>Copyright ©</span>
-                         <span id="id-copyrighted">2018-2025</span>
-                         <span class="cs-copySign">●</span>
-                         <span> New Hope Ministries </span>
-                         <span class="cs-copySign">●</span>
-                         <span> MIT License </span>
+                    <span id="id-copyrighted">2018-2025</span>
+                    <span class="cs-copySign">●</span>
+                    <span> New Hope Ministries </span>
+                    <span class="cs-copySign">●</span>
+                    <span> MIT License </span>
                </a>
                <br><br>
           </div>
